--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 
     <groupId>org.example</groupId>
-    <artifactId>Practica7</artifactId>
+    <artifactId>SpringBootIndra</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
